dashboard not populates with live stats from dashboard server

--- a/cmd/dashboard/web/index.html
+++ b/cmd/dashboard/web/index.html
@@ -9,7 +9,7 @@
             <h1>Hello World</h1>
         </header>
         <div id="metricsContainer">
-            <ul>
+            <ul id="serviceUL">
                 <li class="serviceContainer">
                     <h3 class="serviceTitle">Reverse Proxy</h3>
                     <ul class="serviceInfo">
